<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGroup"/>

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageButton
            android:id="@+id/viewImageButtonSearchRecipes"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_baseline_search_36"
            android:contentDescription="@string/button_text_search" />

        <Button
            android:id="@+id/viewButtonAllRecipes"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/button_text_all"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/default_button_text_size" />

        <Button
            android:id="@+id/viewButtonMyRecipes"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/button_text_my_recipes"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/default_button_text_size" />
        <Button
            android:id="@+id/viewButtonToDoRecipes"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/button_text_to_do"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/default_button_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>