<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/viewImageViewRecipeImagePreview"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_baseline_image_170"
        android:contentDescription="@string/content_description_recipe_image" />

    <TextView
        android:id="@+id/viewTextViewRecipeTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="@dimen/default_title_text_size"
        android:textColor="@color/colorDarkGray"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewImageViewRecipeImagePreview"
        tools:text="@string/item_recipe_title_text" />

    <TextView
        android:id="@+id/viewTextViewRecipeDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:textSize="@dimen/default_text_size"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextViewRecipeTitleText"
        tools:text="@string/item_recipe_description_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shadow"
        android:padding="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTextViewRecipeDescriptionText">

        <TextView
            android:id="@+id/viewTextViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:text="@string/recipe_info_title_ingredients"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/colorDarkGray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewListIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/viewFabAddMyRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_to_do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>